fix for dark mode

--- a/documentation.html
+++ b/documentation.html
@@ -1151,5 +1151,15 @@ return result;</pre
     <!-- Load Scripts -->
     <script src="js/tailwind.config.js"></script>
     <script src="js/shared.js"></script>
+    <script>
+      // Apply saved theme on page load before DOM is ready to prevent flash
+      (function () {
+        const savedTheme = localStorage.getItem("theme");
+        if (savedTheme === "dark") {
+          document.documentElement.classList.add("dark-theme");
+          document.body.classList.add("dark-theme");
+        }
+      })();
+    </script>
   </body>
 </html>
