--- a/index.html
+++ b/index.html
@@ -433,5 +433,15 @@
     <script src="js/rules.js"></script>
     <script src="js/generator.js"></script>
     <script src="js/templates.js"></script>
+    <script>
+      // Apply saved theme on page load before DOM is ready to prevent flash
+      (function () {
+        const savedTheme = localStorage.getItem("theme");
+        if (savedTheme === "dark") {
+          document.documentElement.classList.add("dark-theme");
+          document.body.classList.add("dark-theme");
+        }
+      })();
+    </script>
   </body>
 </html>
