--- a/tester.html
+++ b/tester.html
@@ -313,5 +313,15 @@
     <script src="js/shared.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/tester.js"></script>
+    <script>
+      // Apply saved theme on page load before DOM is ready to prevent flash
+      (function () {
+        const savedTheme = localStorage.getItem("theme");
+        if (savedTheme === "dark") {
+          document.documentElement.classList.add("dark-theme");
+          document.body.classList.add("dark-theme");
+        }
+      })();
+    </script>
   </body>
 </html>
