--- a/about.html
+++ b/about.html
@@ -421,5 +421,15 @@
     <!-- Load Scripts -->
     <script src="js/tailwind.config.js"></script>
     <script src="js/shared.js"></script>
+    <script>
+      // Apply saved theme on page load before DOM is ready to prevent flash
+      (function () {
+        const savedTheme = localStorage.getItem("theme");
+        if (savedTheme === "dark") {
+          document.documentElement.classList.add("dark-theme");
+          document.body.classList.add("dark-theme");
+        }
+      })();
+    </script>
   </body>
 </html>
